--- a/index.html
+++ b/index.html
@@ -1,5 +1,48 @@
 <!DOCTYPE html>
+
 <html lang="en">
+  <!-- this modal isn't working - it needed the Bootstrap scripts at the bottom -->
+  <div
+    class="modal fade"
+    id="exampleModal"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Grey Goo Achieved!</h5>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          You destroyed every form of life on earth! Congradulations - now you
+          can begin anew. If you survived, that is...
+        </div>
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-dismiss="modal"
+            onclick="window.location.reload()"
+          >
+            Restart
+          </button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">
+            Close
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -84,7 +127,43 @@
         </div>
       </div>
     </main>
-    <footer class="container-fluid"></footer>
+    <footer class="container-fluid">
+      <!-- attempt to launch modal programmatically -->
+      <!-- <script id="modal-on-end">
+        $(document).ready(function() {
+          $("#myBtn").click(function() {
+            $("#exampleModal").modal();
+          });
+        });
+        // $("#exampleModal").modal();
+      </script> -->
+
+      <!-- Button trigger modal -->
+      <button
+        id="myBtn"
+        type="button"
+        class="btn btn-primary invisible"
+        data-toggle="modal"
+        data-target="#exampleModal"
+      >
+        Launch endgame modal
+      </button>
+    </footer>
     <script src="app.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
